--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -23,7 +23,7 @@
   "text21" : "Enter your number",
   "text22" : "Enter your date of birth",
   "text23" : "GENDER",
-  "text24" : "Sign Up",
+  "text24" : "Sign In",
   "text25" : "How can we help you?",
   "text26" : "Search for required service",
   "text27" : "Featured",
