--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -15,7 +15,7 @@
   "text13" : "mobile number",
   "text14" : "You will receive a 4 digit code to verify next",
   "text15" : "Enter your mobile number",
-  "text16" : "Login",
+  "text16" : "Done",
   "text17" : "or sign in through",
   "text18" : "Please enter your information",
   "text19" : "Enter your name",
