--- a/assets/translations/ur-PK.json
+++ b/assets/translations/ur-PK.json
@@ -15,7 +15,7 @@
   "text13" : "موبائل نمبر",
   "text14" : "اگلی تصدیق کے لی آپ کو ۴ ہندسوں کا کوڈ ملے گا",
   "text15" : "اپنا موبائل نمبر درج کیجئے",
-  "text16" : "لاگ ان کریں",
+  "text16" : "ہو گیا",
   "text17" : "یا اس کے ذریعے سائن ان کریں",
   "text18" : "برائے مہربانی اپنی معلومات درج کریں",
   "text19" : "اپنا نام درج کریں",
