--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -15,7 +15,7 @@
   "text13" : "mobile number",
   "text14" : "You will receive a 4 digit code to verify next",
   "text15" : "Enter your mobile number",
-  "text16" : "Done",
+  "text16" : "Enter Number",
   "text17" : "or sign in through",
   "text18" : "Please enter your information",
   "text19" : "Enter your name",
@@ -25,20 +25,5 @@
   "text23" : "GENDER",
   "text24" : "Sign In",
   "text25" : "How can we help you?",
-  "text26" : "Search for required service",
-  "text27" : "Featured",
-  "text28" : "Electrician",
-  "text29" : "Plumber",
-  "text30" : "Mover",
-  "text31" : "Carpenter",
-  "text32" : "Cleaner",
-  "text33" : "Aluminium",
-  "text34" : "Ac Installation",
-  "text35" : "Wooden Doors",
-  "text36" : "Glass Windows",
-  "text37" : "Room Cleansing",
-  "text38" : "Shifting",
-  "text39" : "Kitchen Leakage",
-  "text40" : "LCD / LED TV Installation",
-  "text41" : "Wooden Doors"
+  "text26" : "Search for required service"
 }
