--- a/assets/translations/ur-PK.json
+++ b/assets/translations/ur-PK.json
@@ -15,7 +15,7 @@
   "text13" : "موبائل نمبر",
   "text14" : "اگلی تصدیق کے لی آپ کو ۴ ہندسوں کا کوڈ ملے گا",
   "text15" : "اپنا موبائل نمبر درج کیجئے",
-  "text16" : "ہو گیا",
+  "text16" : "نمبر درج کریں",
   "text17" : "یا اس کے ذریعے سائن ان کریں",
   "text18" : "برائے مہربانی اپنی معلومات درج کریں",
   "text19" : "اپنا نام درج کریں",
@@ -25,20 +25,5 @@
   "text23" : "صنف",
   "text24" : "سائن اپ",
   "text25" : "ہم کیسے آپ کی مدد کر سکتے ہیں؟",
-  "text26" : "مطلوبہ خدمت کی تلاش کریں",
-  "text27" : "نمایاں",
-  "text28" : "الیکٹریشن",
-  "text29" : "پلمبر",
-  "text30" : "موور",
-  "text31" : "بڑھئی",
-  "text32" : "کلینر",
-  "text33" : "ایلومینیم",
-  "text34" : "AC تنصیب",
-  "text35" : "لکڑی کے دروازے",
-  "text36" : "گلاس ونڈوز",
-  "text37" : "کمرے کی صفائی",
-  "text38" : "منتقلی",
-  "text39" : "کچن کا رساو",
-  "text40" : "LCD / LED ٹی وی کی تنصیب",
-  "text41" : "Wooden Doors"
+  "text26" : "مطلوبہ خدمت کی تلاش کریں"
 }
